@@ -1,1 +1,24 @@
 # interface-com-javafx
+
+# Libs para JavaFX
+
+javafx.version=11.0.2
+javafx.runtime.version=11.0.2+1
+javafx.runtime.build=1
+
+##### javafx.base.jar
+##### javafx.controls.jar
+##### javafx.fxml.jar
+##### javafx.graphics.jar
+##### javafx.media.jar
+##### javafx.swing.jar
+##### javafx.web.jar
+##### javafx-swt.jar
+
+
+# VM arguments no Eclipse/STS
+
+Run As > Run Configurations > Aba Arguments
+
+--module-path <local-do-diretorio-das-libs-javafx> --add-modules=javafx.fxml,javafx.controls
+
